adapt links to new repo path

--- a/examples/notebooks/AdvancedTutorial.ipynb
+++ b/examples/notebooks/AdvancedTutorial.ipynb
@@ -115,7 +115,7 @@
     "the bins of a distribution have a similar functional dependence on the model parameters\n",
     "and only differ in some coefficients. In such cases, it is possible to use Julia's\n",
     "[metaprogramming](https://docs.julialang.org/en/v1/manual/metaprogramming/) features to\n",
-    "create the vector of functions. The distribution in our [basic tutorial](https://cornelius-g.github.io/EFTfitter.jl/dev/tutorial/)\n",
+    "create the vector of functions. The distribution in our [basic tutorial](https://tudo-physik-e4.github.io/EFTfitter.jl/dev/tutorial/)\n",
     "has been defined by implementing three functions that all call the same function `myfunc`\n",
     "but with different values for the coefficients\n",
     "The same result can also be achieved like this:"
@@ -180,7 +180,7 @@
     "in terms of the uncertainty values and corresponding correlation matrices.\n",
     "If you have these information in terms of covariance matrices, you need to convert it\n",
     "to correlation matrices and uncertainty values before. The function\n",
-    "[`cov_to_cor`](https://cornelius-g.github.io/EFTfitter.jl/dev/api/#EFTfitter.cov_to_cor-Tuple{Array{var%22#s58%22,2}%20where%20var%22#s58%22%3C:Real})\n",
+    "[`cov_to_cor`](https://tudo-physik-e4.github.io/EFTfitter.jl/dev/api/#EFTfitter.cov_to_cor-Tuple{Array{var%22#s58%22,2}%20where%20var%22#s58%22%3C:Real})\n",
     "can be used for this:"
    ],
    "metadata": {}
