--- a/examples/notebooks/Tutorial.ipynb
+++ b/examples/notebooks/Tutorial.ipynb
@@ -42,7 +42,7 @@
    "source": [
     "## File \"tutorial_inputs.jl\"\n",
     "We start by defining all neccesary inputs to create an\n",
-    "[`EFTfitterModel`](https://cornelius-g.github.io/EFTfitter.jl/dev/api/#EFTfitter.EFTfitterModel)."
+    "[`EFTfitterModel`](https://tudo-physik-e4.github.io/EFTfitter.jl/dev/api/#EFTfitter.EFTfitterModel)."
    ],
    "metadata": {}
   },
@@ -194,8 +194,8 @@
    "cell_type": "markdown",
    "source": [
     "Note: Another way to define a vector of functions for the bins of distributions\n",
-    "is shown [here](https://cornelius-g.github.io/EFTfitter.jl/dev/advanced_tutorial/#Creating-a-vector-of-functions-for-distributions-1)\n",
-    "in the [advanced tutorial](https://cornelius-g.github.io/EFTfitter.jl/dev/advanced_tutorial/).\n",
+    "is shown [here](https://tudo-physik-e4.github.io/EFTfitter.jl/dev/advanced_tutorial/#Creating-a-vector-of-functions-for-distributions-1)\n",
+    "in the [advanced tutorial](https://tudo-physik-e4.github.io/EFTfitter.jl/dev/advanced_tutorial/).\n",
     "This can be particularly useful when the predictions for the individual bins\n",
     "have a similar functional relation and only differ in terms of some coefficients,\n",
     "as it is the case here in this example."
@@ -208,8 +208,8 @@
     "### Measurements\n",
     "We can now enter measurements of the observables.\n",
     "This is done by defining a [`NamedTuple`](https://docs.julialang.org/en/v1/manual/types/#Named-Tuple-Types)\n",
-    "consisting of [`Measurement`](https://cornelius-g.github.io/EFTfitter.jl/dev/api/#EFTfitter.Measurement)\n",
-    "and [`MeasurementDistribution`](https://cornelius-g.github.io/EFTfitter.jl/dev/api/#EFTfitter.MeasurementDistribution) objects."
+    "consisting of [`Measurement`](https://tudo-physik-e4.github.io/EFTfitter.jl/dev/api/#EFTfitter.Measurement)\n",
+    "and [`MeasurementDistribution`](https://tudo-physik-e4.github.io/EFTfitter.jl/dev/api/#EFTfitter.MeasurementDistribution) objects."
    ],
    "metadata": {}
   },
@@ -218,7 +218,7 @@
    "source": [
     "A `Measurement` consists of the observable, the measured numerical value and\n",
     "numerical values for the (multiple types of) uncertainties.\n",
-    "The observable can be passed to the `Measurement` either as an [`Observable`](https://cornelius-g.github.io/EFTfitter.jl/dev/api/#EFTfitter.Observable)\n",
+    "The observable can be passed to the `Measurement` either as an [`Observable`](https://tudo-physik-e4.github.io/EFTfitter.jl/dev/api/#EFTfitter.Observable)\n",
     "object or as a `Function`. When using the latter, the observable is assumed to be unconstrained.\n",
     "The uncertainties are passed as a [`NamedTuple`](https://docs.julialang.org/en/v1/manual/types/#Named-Tuple-Types).\n",
     "Each measurement has to provide uncertainty values for all of the (active) uncertainty\n",
@@ -268,8 +268,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Further information on the constructors see the API documentation of [`Measurement`](https://cornelius-g.github.io/EFTfitter.jl/dev/api/#EFTfitter.Measurement)\n",
-    "and [`MeasurementDistribution`](https://cornelius-g.github.io/EFTfitter.jl/dev/api/#EFTfitter.MeasurementDistribution)."
+    "Further information on the constructors see the API documentation of [`Measurement`](https://tudo-physik-e4.github.io/EFTfitter.jl/dev/api/#EFTfitter.Measurement)\n",
+    "and [`MeasurementDistribution`](https://tudo-physik-e4.github.io/EFTfitter.jl/dev/api/#EFTfitter.MeasurementDistribution)."
    ],
    "metadata": {}
   },
@@ -288,7 +288,7 @@
     "### Correlations\n",
     "The correlations between the uncertainties of the measurements need to be provided\n",
     "for each of the uncertainty types. We can pass them by defining a `NamedTuple`\n",
-    "of [`Correlation`](https://cornelius-g.github.io/EFTfitter.jl/dev/api/#EFTfitter.Correlation)\n",
+    "of [`Correlation`](https://tudo-physik-e4.github.io/EFTfitter.jl/dev/api/#EFTfitter.Correlation)\n",
     "objects that contain the corresponding correlation matrices.\n",
     "The correlation matrix for each type of uncertainty needs to have a size\n",
     "of ``N \\times N``, where ``N`` is the number of measurements, counting each bin of a distribution.\n",
