adapt to new BAT syntax (due to measure terminology)

--- a/examples/notebooks/AdvancedTutorial.ipynb
+++ b/examples/notebooks/AdvancedTutorial.ipynb
@@ -21971,7 +21971,7 @@
    "source": [
     "model = EFTfitterModel(parameters, measurements, correlations, nuisance_correlations)\n",
     "\n",
-    "posterior = PosteriorDensity(model)\n",
+    "posterior = PosteriorMeasure(model)\n",
     "\n",
     "algorithm = MCMCSampling(mcalg = MetropolisHastings(), nsteps = 10^5, nchains = 4)\n",
     "samples = bat_sample(posterior, algorithm).result;\n",
