--- a/examples/notebooks/BLUE.ipynb
+++ b/examples/notebooks/BLUE.ipynb
@@ -173,7 +173,7 @@
    "cell_type": "code",
    "source": [
     "model = EFTfitterModel(parameters, measurements, correlations)\n",
-    "posterior = PosteriorDensity(model);"
+    "posterior = PosteriorMeasure(model);"
    ],
    "metadata": {},
    "execution_count": 6
