--- a/examples/notebooks/EmptyTemplate.ipynb
+++ b/examples/notebooks/EmptyTemplate.ipynb
@@ -170,7 +170,7 @@
    "outputs": [],
    "cell_type": "code",
    "source": [
-    "posterior = PosteriorDensity(model);"
+    "posterior = PosteriorMeasure(model);"
    ],
    "metadata": {},
    "execution_count": 7
