--- a/examples/notebooks/Tutorial.ipynb
+++ b/examples/notebooks/Tutorial.ipynb
@@ -456,7 +456,7 @@
    ],
    "cell_type": "code",
    "source": [
-    "posterior = PosteriorDensity(model)\n",
+    "posterior = PosteriorMeasure(model)\n",
     "\n",
     "algorithm = MCMCSampling(mcalg = MetropolisHastings(), nsteps = 10^5, nchains = 4)\n",
     "samples = bat_sample(posterior, algorithm).result;"
